syntax = "proto3";
package Proto.Lego.Aggregate.Messages;
option csharp_namespace = "Proto.Lego.Aggregate.Messages";

import "google/protobuf/any.proto";

message Operation {
	string workflow_id = 1;
	int64 sequence = 2;
	OPERATION_TYPE operation_type = 3;
	google.protobuf.Any action = 4;
}

message OperationResponse {
	bool success = 1;
	string error_message = 2;
}

enum OPERATION_TYPE {
	PREPARE = 0;
	CONFIRM = 1;
	CANCEL = 2;
	EXECUTE = 3;
}

message WipeWorkflowState {
	string workflow_id = 1;
}

//State

message AggregateStateWrapper {
	map<string,WorkflowState> workflow_states = 1;
	google.protobuf.Any inner_state = 2;
}

message WorkflowState {
	int64 sequence = 1;
	map<int64,OperationResponse> responses = 2;
	repeated google.protobuf.Any prepared_actions = 3;
}